# yamlfun

./: CONTRIBUTING.md  Cargo.toml  README.md  concept.yml
examples/: add.rs  call.rs  case-of.rs  chain.rs  conditions.rs  constant.rs  constants.rs  equals.rs  function.rs  if-else.rs  lambda.rs  let-in.rs  list.rs  platform.rs  record.rs  serde.rs  sum.rs  variable.rs  variables.rs  with.rs
src/: env.rs  error.rs  expr.rs  lib.rs  main.rs  platform.rs  vm.rs
src/Std/: Basics.yaml  Basics.yml  List.yaml  List.yml
src/Yaml/: Std.yaml
src/value/: function.rs  list.rs  mod.rs  record.rs  value.rs
